@@ -1,5 +1,15 @@
 {{$NEXT}}
 
+- Fixes for Unicode characters when generating HTML. The Markdent::Simple::*
+  classes now make sure that the scalar it returns containing HTML contains
+  characters, not bytes. The Markdent::Handler::HTMLStream::* classes no
+  longer entitize non-ASCII characters. Only control characters and HTML
+  reserved character (< > & ") are encoded as HTML entities. The problems with
+  Unicode handling were reported by Polina Shubha. GitHub PR #8.
+
+- HTML blocks containing Unicode characters could cause the parser to die or
+  warn. Reported by Polina Shubha. GitHub PR #8.
+
 - A change in 0.25 broke the ability to have a dialect with just a block
   parser or span parser rather than both. Reported by Polina Shubina. GitHub
   issue #7.
